cabal-version:      2.4
name:               csv
version:            0.1.0.0
license: Apache-2.0
license-files:
  LICENSE

synopsis: Simple DIY streaming of CSV data
bug-reports: https://github.com/j-mueller/csv/issues
author:             Jann Müller
maintainer:         j-mueller@users.noreply.github.com

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables MultiParamTypeClasses
                        DeriveGeneric StandaloneDeriving DeriveLift FlexibleContexts
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable ImportQualifiedPost
    ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities

library
  import: lang
  hs-source-dirs:
    lib
  exposed-modules:
    Data.CSV.Export
  build-depends:
    base >=4.12 && <4.16,
    streaming -any,
    time -any,
    text